Mon Apr 23 16:09:38 CDT 2001 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in, lib/mlib.c, main/archives.c, debian/changelog: Added
    new PROCNOERR flag, which disabled the error message that is displayed
    when a process has an error return.

Mon Apr 23 22:26:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/dpkg.8: note that force-overwrite is not enabled per default

Mon Apr 23 15:39:37 CDT 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/{build,extract,info}.c, include/dpkg.h.in, lib/mlib.c,
    main/{archives,enquiry,help,processarc}.c: Convert waitsubproc and
    checksubprocerr to use a flags variable, instead of separate ints.

Mon Apr 23 15:36:58 CDT 2001 Adam Heath <doogie@debian.org>

  * main/depcon.c, debian/changelog: When walking the list of providers of
    a dependency, the arguments were passed in reverse to the cyclebreak
    checker, so cycles involving provides were never detected.
  * debian/changelog: Document that we fixed a segfault.

Mon Apr 23 14:13:48 CDT 2001 Adam Heath <doogie@debian.org>

  * main/help.c: Fix bad memory access do_script(), introduced when the
    casting errors were fixed previously.

Mon Apr 23 06:27:47 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/*.c: Changed 0 to NULL.

Mon Apr 23 06:25:36 CDT 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/extract.c: More %z format fixes.

Mon Apr 23 05:31:03 CDT 2001 Adam Heath <doogie@debian.org>

  * split/info.c: Change format string, to handle size_t.

Mon Apr 23 04:45:23 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: s/--no-debsign/--no-debsig/ in help.

Mon Apr 23 03:21:10 CDT 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/{build,extract,main}.c, split/{info,join,main,queue}.c,
    split/dpkg-split.h, lib/{dump,ehandle,fields,mlib,parse{,help},varbuf,
    vercmp}.c, lib/parsedump.h, main/{archives,configure,enquiry,filesdb,
    help,main,packages,processarc,remove}.c, main/{filesdb,main}.h,