@@ -1,3 +1,9 @@
+Mon Apr 23 23:54:34 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main.h: add declaration for nerrs
+  * main/enquiry.c: exit with non-zero exitcode if -l or -S do not 
+    produce any output 
+
 Mon Apr 23 16:09:38 CDT 2001 Adam Heath <doogie@debian.org>
 
   * include/dpkg.h.in, lib/mlib.c, main/archives.c, debian/changelog: Added
